--- a/tests/mypy.ini
+++ b/tests/mypy.ini
@@ -14,11 +14,23 @@ ignore_missing_imports = True
 [mypy-mpl_toolkits.*]
 ignore_missing_imports = True
 
+[mypy-numba.*]
+ignore_missing_imports = True
+
 [mypy-numpy.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
 ignore_missing_imports = True
 
 [mypy-scipy.*]
 ignore_missing_imports = True
 
-[mypy-pytest.*]
+[mypy-sympy.*]
+ignore_missing_imports = True
+
+[mypy-tqdm.*]
 ignore_missing_imports = True
