--- a/tests/mypy.ini
+++ b/tests/mypy.ini
@@ -23,6 +23,9 @@ ignore_missing_imports = True
 [mypy-pandas.*]
 ignore_missing_imports = True
 
+[mypy-pyfftw.*]
+ignore_missing_imports = True
+
 [mypy-pytest.*]
 ignore_missing_imports = True
 
