--- a/tests/mypy.ini
+++ b/tests/mypy.ini
@@ -8,6 +8,9 @@ warn_unused_ignores = True
 [mypy-h5py.*]
 ignore_missing_imports = True
 
+[mypy-ipywidgets.*]
+ignore_missing_imports = True
+
 [mypy-IPython.*]
 ignore_missing_imports = True
 
