--- a/tests/mypy.ini
+++ b/tests/mypy.ini
@@ -20,6 +20,9 @@ ignore_missing_imports = True
 [mypy-mpl_toolkits.*]
 ignore_missing_imports = True
 
+[mypy-napari.*]
+ignore_missing_imports = True
+
 [mypy-numba.*]
 ignore_missing_imports = True
 
