--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
+addopts = --strict-markers
+markers =
+    slow
 filterwarnings =
     ignore:.*importing the ABCs from.*:DeprecationWarning
     ignore:.*IPython.utils.signatures backport for Python 2 is deprecated.*:DeprecationWarning
