--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -2,6 +2,7 @@
 addopts = --strict-markers
 markers =
     slow
+    no_cover
 filterwarnings =
     ignore:.*importing the ABCs from.*:DeprecationWarning
     ignore:.*IPython.utils.signatures backport for Python 2 is deprecated.*:DeprecationWarning
