--- a/tests/mypy.ini
+++ b/tests/mypy.ini
@@ -25,6 +25,9 @@ ignore_missing_imports = True
 
 [mypy-numba.*]
 ignore_missing_imports = True
+ignore_errors = False
+follow_imports=skip
+follow_imports_for_stubs=True
 
 [mypy-numpy.*]
 ignore_missing_imports = True
