--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 addopts = --strict-markers
 markers =
-    slow
-    no_cover
+    slow: mark test as slow to run
 filterwarnings =
     ignore:.*importing the ABCs from.*:DeprecationWarning
     ignore:.*IPython.utils.signatures backport for Python 2 is deprecated.*:DeprecationWarning
+    ignore:.*scipy.sparse.*:DeprecationWarning
