--- a/tests/mypy.ini
+++ b/tests/mypy.ini
@@ -21,6 +21,9 @@ ignore_missing_imports = True
 [mypy-mpl_toolkits.*]
 ignore_missing_imports = True
 
+[mypy-mpi4py.*]
+ignore_missing_imports = True
+
 [mypy-napari.*]
 ignore_missing_imports = True
 
