--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,6 @@
+include LICENSE
+include README.md
+include requirements.txt
 include droplets/py.typed
+
 recursive-include droplets/**/resources *
