--- a/.github/workflows/coverage_report.yml
+++ b/.github/workflows/coverage_report.yml
@@ -11,23 +11,23 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
     - name: Generate coverage report
       run: |
         pip install h5py pytest pytest-cov
         cd tests
         export MPLBACKEND="agg"
-        pytest --cov-report xml:report_coverage.xml --cov=droplets ..
-        
+        pytest --cov-config=pyproject.toml --cov-report xml:report_coverage.xml --cov=droplets
+
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
       with:
