--- a/.github/workflows/coverage_report.yml
+++ b/.github/workflows/coverage_report.yml
@@ -11,27 +11,27 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
     - name: Generate coverage report
       run: |
         pip install h5py pytest pytest-cov
-        cd tests
         export MPLBACKEND="agg"
-        pytest --cov-report xml:report_coverage.xml --cov=droplets ..
-        
+        export PYTHONPATH="${PYTHONPATH}:`pwd`"
+        pytest --cov-config=pyproject.toml --cov-report xml:report_coverage.xml --cov=droplets droplets
+
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./tests/report_coverage.xml
+        file: ./report_coverage.xml
         flags: unittests
         fail_ci_if_error: true
