--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -36,5 +36,5 @@ jobs:
         MPLBACKEND: agg
       run: |
         pip install pytest
-        cd tests
+        cd scripts
         python run_tests.py --unit
