--- a/.github/workflows/check_docs.yml
+++ b/.github/workflows/check_docs.yml
@@ -7,6 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r docs/requirements.txt
     - uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
