--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,6 @@
 Sphinx>=4
 sphinx-autodoc-annotation>=1.0
 sphinx-gallery>=0.6
-sphinx-rtd-theme>=0.4
+sphinx-rtd-theme>=1.2
+sphinxcontrib-jquery>=4
 Pillow>=7.0
