--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -37,4 +37,4 @@ jobs:
       run: |
         pip install pytest
         cd scripts
-        python run_tests.py --unit --num_cores auto
+        python run_tests.py --unit --parallel
