--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -22,12 +22,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install h5py
+        cd tests
+        pip install -r requirements.txt
+        cd ..
 
     - name: Test types with mypy
       continue-on-error: true
       run: |
-        pip install mypy
         python -m mypy --config-file pyproject.toml --pretty --package droplets
 
     - name: Test with pytest
@@ -35,6 +36,5 @@ jobs:
         NUMBA_WARNINGS: 1
         MPLBACKEND: agg
       run: |
-        pip install pytest
         cd scripts
-        python run_tests.py --unit
+        python run_tests.py --unit --parallel
