--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -22,9 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        cd tests
-        pip install -r requirements.txt
-        cd ..
+        pip install -r tests/requirements.txt
 
     - name: Test types with mypy
       continue-on-error: true
