--- a/.github/workflows/release_pip.yml
+++ b/.github/workflows/release_pip.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Build and publish
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: python -m twine upload dist/*
