--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,11 +1,10 @@
 -r ../requirements.txt
-black>=24
 docformatter>=1.7
-isort>=5.1
 pyupgrade>=3
 pytest>=5.4
 pytest-cov>=2.8
 pytest-xdist>=1.30
 mypy>=0.770
+ruff>=0.6
 types-PyYAML
 types-tqdm
