--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ select = [
     "I",  # isort
     "A",  # flake8-builtins 
     "B",  # flake8-bugbear
+    "F",  # pyflakes
     "C4",  # flake8-comprehensions
     "FA", # flake8-future-annotations
     "ISC", # flake8-implicit-str-concat
@@ -86,7 +87,7 @@ select = [
     "SIM", # flake8-simplify
     "PTH", # flake8-use-pathlib
 ]
-ignore = ["B007", "B027", "B028", "SIM108", "ISC001", "PT006", "PT011", "RET504", "RET505", "RET506"]
+ignore = ["B007", "B027", "B028", "F401", "F403", "SIM108", "ISC001", "PT006", "PT011", "RET504", "RET505", "RET506"]
 
 [tool.ruff.lint.isort]
 section-order = ["future", "standard-library", "third-party", "first-party", "my-modules", "self", "local-folder"]
