--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.9,<3.14"
 dynamic = ["version"]
 
 keywords = ["emulsions", "image-analysis"]
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 # Requirements for setuptools
@@ -30,7 +31,7 @@ dependencies = [
     "numba>=0.59",
     "numpy>=1.22",
     "scipy>=1.4",
-    "py-pde>=0.39",
+    "py-pde>=0.43",
 ]
 
 [project.urls]
